--- a/Capstone Project/Mental Health/app/src/main/res/values/strings.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/values/strings.xml
@@ -1,10 +1,8 @@
 <resources>
-    <string name="app_name">MentalHealth</string>
+    <string name="app_name">Mently</string>
     <string name="sign_up">Sign Up</string>
     <string-array name="simple_items">
         <item>Laki - Laki</item>
         <item>Perempuan</item>
     </string-array>
-<!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
