--- a/Capstone Project/Mental Health/app/src/main/res/values/strings.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Mently</string>
-    <string name="sign_up">Sign Up</string>
-    <string name="login">Login</string>
+    <string name="sign_up">SIGN UP</string>
+    <string name="login">LOGIN</string>
     <string-array name="simple_items">
         <item>Laki - Laki</item>
         <item>Perempuan</item>
@@ -10,4 +10,6 @@
     <string name="title_home">Beranda</string>
     <string name="title_history">Hasil Konsultasi</string>
     <string name="title_profile">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
