--- a/Capstone Project/Mental Health/app/src/main/res/values/strings.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="title_home">Beranda</string>
     <string name="title_history">Hasil Konsultasi</string>
     <string name="title_profile">Profile</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 
 </resources>
