implement Api Login Register

--- a/Capstone Project/Mental Health/app/src/main/res/values/strings.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="sign_up">SIGN UP</string>
     <string name="login">LOGIN</string>
     <string-array name="simple_items">
-        <item>Laki - Laki</item>
+        <item>Laki Laki</item>
         <item>Perempuan</item>
     </string-array>
     <string name="title_activity_home_page">HomePage_Activity</string>
