Display the name according to the name of the logged in user

--- a/Capstone Project/Mental Health/app/src/main/res/values/strings.xml
+++ b/Capstone Project/Mental Health/app/src/main/res/values/strings.xml
@@ -13,5 +13,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="empty_image_warning">Pilih gambar dulu.</string>
+    <string name="greeting">Hi %1$s,</string>
 
 </resources>
